Done first section of the screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="textHeader" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">@color/textHeader</item>
+    </style>
+
+    <style name="textHashTag" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/textHashTag</item>
+    </style>
+
 </resources>
