--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.playtech.infinitphoto.MainActivityViewModel"/>
+    </data>
+
     <LinearLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
@@ -17,6 +23,47 @@
             app:layout_collapseMode="pin"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        <LinearLayout
+            android:padding="@dimen/all_padding_medium"
+            android:background="@drawable/bottom_line"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    tools:text="Beautiful Hipster Family"
+                    android:text="@{viewModel.albumName}"
+                    style="@style/textHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:lines="1"
+                    android:ellipsize="marquee"
+                    android:id="@+id/hashName" />
+
+                <TextView
+                    tools:text="#beautifulhipsterfamily"
+                    android:text="@{viewModel.hashTag}"
+                    style="@style/textHashTag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/hashTag" />
+            </LinearLayout>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/icon_padding"
+                android:background="@drawable/button_circle_line"
+                android:src="@drawable/icon_add"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 </layout>
