--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#0d84fe</color>
     <color name="colorPrimaryDark">#0d84fe</color>
     <color name="colorAccent">#798588</color>
+    <color name="textHeader">#212425</color>
+    <color name="textHashTag">#696969</color>
+    <color name="background_content">#ffffff</color>
+    <color name="divider">#efefef</color>
+    <color name="button_line">#cccccc</color>
 </resources>
