--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,32 @@
 
         </LinearLayout>
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bottom_line"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/bottom_line"
+            android:layout_weight="1"/>
+
+        <LinearLayout
+            android:padding="@dimen/all_padding_medium"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/footer_height"
+            android:gravity="end|center_vertical">
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/solid_white"
+                android:src="@drawable/icon_more"/>
+        </LinearLayout>
+
     </LinearLayout>
 </layout>
 
