--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="background_content">#ffffff</color>
     <color name="divider">#efefef</color>
     <color name="button_line">#cccccc</color>
+    <color name="solid_white">#ffffff</color>
 </resources>
