--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="all_padding_medium">16dp</dimen>
     <dimen name="icon_padding">5dp</dimen>
+    <dimen name="footer_height">56dp</dimen>
 </resources>
