--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.playtech.infinitphoto.MainActivityViewModel"/>
+            type="com.playtech.infinitphoto.activities.main.MainActivityViewModel"/>
     </data>
 
     <LinearLayout
@@ -70,13 +70,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bottom_line"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            style="@style/tabBar"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/bottom_line"
+
             android:layout_weight="1"/>
 
         <LinearLayout
