--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
                 <TextView
                     tools:text="Beautiful Hipster Family"
                     android:text="@{viewModel.albumName}"
-                    style="@style/textHeader"
+                    style="@style/TextHeader"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:lines="1"
@@ -50,7 +50,7 @@
                 <TextView
                     tools:text="#beautifulhipsterfamily"
                     android:text="@{viewModel.hashTag}"
-                    style="@style/textHashTag"
+                    style="@style/TextHashTag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/hashTag" />
@@ -70,7 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bottom_line"
-            style="@style/tabBar"
+            style="@style/TabBar"
             android:theme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <android.support.v4.view.ViewPager
@@ -78,7 +78,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@drawable/bottom_line"
-
             android:layout_weight="1"/>
 
         <LinearLayout
