--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,17 +13,23 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="textHeader" parent="TextAppearance.AppCompat.Medium">
+    <style name="TextHeader" parent="TextAppearance.AppCompat.Medium">
         <item name="android:textColor">@color/textHeader</item>
     </style>
 
-    <style name="textHashTag" parent="TextAppearance.AppCompat.Body1">
+    <style name="TextHashTag" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textColor">@color/textHashTag</item>
     </style>
 
-    <style name="tabBar" parent="ThemeOverlay.AppCompat.Light">
+    <style name="TabBar" parent="Widget.Design.TabLayout">
         <item name="tabSelectedTextColor">@color/colorAccent</item>
         <item name="tabTextColor">@color/deselected_tab_text</item>
         <item name="tabIndicatorColor">@color/colorAccent</item>
+        <item name="tabTextAppearance">@style/TabTextAppearance</item>
+    </style>
+
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
