--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,11 +77,11 @@
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@drawable/bottom_line"
             android:layout_weight="1"/>
 
         <LinearLayout
             android:padding="@dimen/all_padding_medium"
+            android:background="@drawable/top_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/footer_height"
             android:gravity="end|center_vertical">
