Decarate grid layout

--- a/app/src/main/res/layout/fragment_my_matches.xml
+++ b/app/src/main/res/layout/fragment_my_matches.xml
@@ -4,12 +4,12 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/my_matches_label"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/photo_list"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
