--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="all_padding_medium">16dp</dimen>
     <dimen name="icon_padding">5dp</dimen>
     <dimen name="footer_height">56dp</dimen>
+    <dimen name="grid_spacing">1.5dp</dimen>
 </resources>
