--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="item"
-            type="com.playtech.infinitphoto.model.Photo"/>
+            type="com.playtech.infinitphoto.model.PhotoModel"/>
     </data>
     <com.playtech.infinitphoto.view.layout.SquareFrameLayout
         android:layout_width="match_parent"
@@ -19,11 +19,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
         <ImageView
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:imageUrl="@{item.imageUrl}"
+
             android:scaleType="centerCrop"
             android:layout_centerInParent="true"
             tools:src="@drawable/place_holder"/>
+
+        <!--app:imageUrl="@{item.imageUrl}"-->
     </com.playtech.infinitphoto.view.layout.SquareFrameLayout>
 </layout>
