--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -6,6 +6,8 @@
         <variable
             name="item"
             type="com.playtech.infinitphoto.model.PhotoModel"/>
+
+        <import type="android.view.View"/>
     </data>
     <com.playtech.infinitphoto.view.layout.SquareFrameLayout
         android:layout_width="match_parent"
@@ -13,16 +15,16 @@
         android:padding="@dimen/grid_spacing"
         tools:layout_width="300dp"
         tools:layout_height="300dp">
-        <TextView
-        android:text="@string/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        <ProgressBar
+            android:visibility="@{item.loadFinish? View.GONE:View.VISIBLE}"
+            android:id="@+id/image_progress"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:scaleType="centerCrop"
             android:layout_centerInParent="true"
             tools:src="@drawable/place_holder"/>
