--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="icon_padding">5dp</dimen>
     <dimen name="footer_height">56dp</dimen>
     <dimen name="grid_spacing">1.5dp</dimen>
+    <dimen name="textSmall">12sp</dimen>
 </resources>
