--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -29,6 +29,7 @@
             android:scaleType="centerCrop"
             android:layout_centerInParent="true"
             app:photoModel="@{item}"
+            app:imageUrl="@{item.imageUrl}"
             tools:src="@drawable/place_holder"/>
         <LinearLayout
             android:visibility="@{item.loadError? View.VISIBLE:View.GONE}"
@@ -44,6 +45,7 @@
                 android:text="@string/load_fail"/>
             <Button
                 style="@style/RetryButton"
+                android:id="@+id/retry_button"
                 android:text="@string/retry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
