--- a/app/src/main/res/layout/fragment_my_matches.xml
+++ b/app/src/main/res/layout/fragment_my_matches.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
@@ -9,10 +10,13 @@
             name="adapter"
             type="android.support.v7.widget.RecyclerView.Adapter"/>
     </data>
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/rootLayout"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/photo_list"
             android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -21,6 +25,28 @@
             android:paddingEnd="@dimen/activity_horizontal_margin"
             app:photoAdapter="@{adapter}"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            tools:layout_height="wrap_content"
+            />
+
+        <!--<LinearLayout-->
+            <!--android:padding="@dimen/all_padding_medium"-->
+            <!--android:layout_below="@id/photo_list"-->
+            <!--android:id="@+id/load_more_progress"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:background="@drawable/load_more_background"-->
+            <!--android:orientation="horizontal">-->
+            <!--<ProgressBar-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"/>-->
+            <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:textColor="@color/solid_white"-->
+                <!--android:text="@string/load_more"/>-->
+        <!--</LinearLayout>-->
+
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
