--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -20,8 +20,8 @@
             android:visibility="@{item.loadFinish? View.GONE:View.VISIBLE}"
             android:id="@+id/image_progress"
             android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_width="@dimen/progress_size"
+            android:layout_height="@dimen/progress_size" />
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
