--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,8 @@
     <dimen name="footer_height">56dp</dimen>
     <dimen name="grid_spacing">1.5dp</dimen>
     <dimen name="textSmall">12sp</dimen>
+    <dimen name="load_more_progress_max_height">82dp</dimen>
+    <dimen name="load_more_progress_min_height">1dp</dimen>
+    <dimen name="progress_size">45dp</dimen>
+    <dimen name="load_more_radius">25dp</dimen>
 </resources>
