--- a/app/src/main/res/layout/fragment_my_matches.xml
+++ b/app/src/main/res/layout/fragment_my_matches.xml
@@ -9,6 +9,7 @@
         <variable
             name="adapter"
             type="com.playtech.infinitphoto.adapter.PhotoListAdapter"/>
+        <import type="android.view.View"/>
     </data>
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/rootLayout"
@@ -16,6 +17,12 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ProgressBar
+            android:visibility="@{viewModel.loading? View.VISIBLE:View.GONE}"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/photo_list"
@@ -25,8 +32,7 @@
             android:paddingEnd="@dimen/activity_horizontal_margin"
             app:photoAdapter="@{adapter}"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
