--- a/app/src/main/res/layout/fragment_my_matches.xml
+++ b/app/src/main/res/layout/fragment_my_matches.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="viewModel"
             type="com.playtech.infinitphoto.fragments.mymatchesfragment.MyMatchesViewModel"/>
         <variable
             name="adapter"
-            type="com.playtech.infinitphoto.adapter.PhotoListAdapter"/>
+            type="com.playtech.infinitphoto.adapter.PhotoGirdAdapter"/>
         <import type="android.view.View"/>
     </data>
     <android.support.design.widget.CoordinatorLayout
@@ -24,15 +23,21 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/photo_list"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingStart="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            app:photoAdapter="@{adapter}"
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/photo_list"-->
+            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+            <!--android:paddingStart="@dimen/activity_horizontal_margin"-->
+            <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+            <!--android:paddingEnd="@dimen/activity_horizontal_margin"-->
+            <!--app:photoAdapter="@{adapter}"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
+        <GridView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:id="@+id/photo_list"
+            app:photoAdapter="@{adapter}"
+            android:numColumns="3"/>
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
