--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -17,7 +17,7 @@
         tools:layout_width="300dp"
         tools:layout_height="300dp">
         <ProgressBar
-            android:visibility="@{item.loadFinish? View.GONE:View.VISIBLE}"
+            android:visibility="@{item.loadFinish? View.GONE:View.VISIBLE, default = gone}"
             android:id="@+id/image_progress"
             android:layout_centerInParent="true"
             android:layout_width="@dimen/progress_size"
