--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="button_line">#cccccc</color>
     <color name="solid_white">#ffffff</color>
     <color name="deselected_tab_text">#b4bcbe</color>
+    <color name="invisible">#00ffffff</color>
 </resources>
