--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="textSmall">12sp</dimen>
     <dimen name="progress_size">45dp</dimen>
     <dimen name="load_more_radius">25dp</dimen>
+    <dimen name="textLarge">20sp</dimen>
+    <dimen name="activity_vertical_margin">10dp</dimen>
 </resources>
